# stress

./: LICENSE.md  README.md
code/: CMakeLists.txt  Plugin.cpp  Plugin.def  TexShade.cpp  Texmap.cpp  Texmap.h  Texmap.rc  debug.cpp  debug.h  resource.h
code/Max2012/: CMakeLists.txt
code/Max2013/: CMakeLists.txt
docs/: stress.txt
